welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:-7: error: not found: value arrayFront9
 val res = arrayFront9( t.getParameter(0).asInstanceOf[Array[Int]]);
           ^arrayFront9:4: error: not found: value i
  while (i != nums.length){
         ^arrayFront9:6: error: not found: value i
    if (nums(i) == 9){
             ^