welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.code
def arrayCount9(nums:Array[Int]): Int = {
  var count:Int = 0
  
  while (i != nums.length){
    
    if (nums(i) == 9){
      count = count + 1
    }
  }
  
  return count
}